--- a/pages/museo.html
+++ b/pages/museo.html
@@ -83,27 +83,27 @@
 			<div class="centrado">
 	
 				<div class="punto lineaCiudades">
-					<a class="colorAmarillo" href="">◉</a>
-					<p class="miniCartel">Chi</p>
+					<a class="colorAmarillo" href="#CHIC">◉</a>
+					<p class="miniCartel">Chicago</p>
 				</div>
 				<div class="punto lineaCiudades">
-					<a class="colorAmarillo" href="">◉</a>
+					<a class="colorAmarillo" href="#SP">◉</a>
 					<p class="miniCartel">Springfield</p>
 				</div>
 				<div class="punto lineaCiudades">
-					<a class="colorAmarillo" href="">◉</a>
+					<a class="colorAmarillo" href="#OK">◉</a>
 					<p class="miniCartel">Oklahoma</p>
 				</div>
 				<div class="punto lineaCiudades">
-					<a class="colorAmarillo" href="">◉</a>
-					<p class="miniCartel">Shamrock</p>
+					<a class="colorAmarillo" href="#TX">◉</a>
+					<p class="miniCartel">Texas</p>
 				</div>
 				<div class="punto lineaCiudades">
-					<a class="colorAmarillo" href="">◉</a>
+					<a class="colorAmarillo" href="#AL">◉</a>
 					<p class="miniCartel">Alburquerque</p>
 				</div>
 				<div class="punto lineaCiudades">
-					<a class="colorAmarillo" href="">◉</a>
+					<a class="colorAmarillo" href="#FL">◉</a>
 					<p class="miniCartel">Flagstaff</p>
 				</div>
 				<div class="punto lineaCiudades">
@@ -132,15 +132,15 @@
 						<a href="#" class="enlace lasVegas">Las Vegas</a>
 						<a href="#LV" class="enlace lasVegasPunto">◉</a>
 						<a href="#" class="enlace flagstaff">Flagstaff</a>
-						<a href="#" class="enlace flagstaffPunto">◉</a>
+						<a href="#FL" class="enlace flagstaffPunto">◉</a>
 						<a href="#" class="enlace alburquerque">Alburquerque</a>
-						<a href="#" class="enlace alburquerquePunto">◉</a>
-						<a href="#" class="enlace shamrock">Shamrock</a>
-						<a href="#" class="enlace shamrockPunto">◉</a>
+						<a href="#AL" class="enlace alburquerquePunto">◉</a>
+						<a href="#" class="enlace shamrock">Texas</a>
+						<a href="#TX" class="enlace shamrockPunto">◉</a>
 						<a href="#" class="enlace oklahomaCity">Oklahoma City</a>
-						<a href="#" class="enlace oklahomaCityPunto">◉</a>
+						<a href="#OK" class="enlace oklahomaCityPunto">◉</a>
 						<a href="#" class="enlace springfield">Springfield</a>
-						<a href="#" class="enlace springfieldPunto">◉</a>
+						<a href="#SP" class="enlace springfieldPunto">◉</a>
 						<a href="#" class="enlace chicago">Chicago</a>
 						<a href="#CHIC" class="enlace chicagoPunto">◉</a>
 						<img class="enlace cartelRuta66" src="../images/granero/museo/543626.png" alt="">
@@ -167,26 +167,26 @@
 								<div class="titulo-imagen">
 									<a href="#">Hollywood</a>
 								</div>
-								<img src="../images/granero/ciudades/la/1140-hollywood-walk-of-fame-esp.jpg">
+								<img src="../images/granero/ciudades/ch/2af94a274ebf7f6716f9b2068595581c.jpg">
 							</li>
 							<li>
 								<div class="titulo-imagen">
 									<a href="#">Ciudad de Los Angeles</a>
 								</div>
-								<img src="../images/granero/ciudades/la/1200px-LA_Skyline_Mountains2.jpg">
+								<img src="../images/granero/ciudades/ch/caption.jpg">
 							</li>
 							<li>
 								<div class="titulo-imagen">
-									<a href="#">Rodeo Drive Beverly Hills</a>
+									<a href="#">Chicago night</a>
 								</div>
 								<img
-									src="../images/granero/ciudades/la/header-rodeo-drive-GOBH0222-fe862bbd02fe47c3a18e315f4285fb76.jpg">
+									src="../images/granero/ciudades/ch/chicago-illinois-CHITG0221-e448062fc5164da0bba639f9857987f6.jpg">
 							</li>
 							<li>
 								<div class="titulo-imagen">
-									<a href="#">Cartel Hollywood</a>
+									<a href="#">Royal Sonesta</a>
 								</div>
-								<img src="../images/granero/ciudades/la/Hollywood_Sign_(Zuschnitt).jpg">
+								<img src="../images/granero/ciudades/ch/evening-at-royal-sonesta.jpg">
 							</li>
 							<li>
 								<div class="titulo-imagen">
@@ -196,16 +196,253 @@
 							</li>
 						</ul>
 					</div>
-					<p class="cajaContenido">Los Ángeles es una ciudad icónica ubicada en California, conocida por su
-						diversidad cultural y atracciones turísticas como Hollywood, el Parque Griffith y Disneyland.
-						Tiene un clima mediterráneo y es un importante centro cultural y de entretenimiento.
-						La Ruta 66, también llamada la "Main Street of America", fue una histórica carretera que se
-						extendía
-						desde Chicago hasta Los Ángeles. Fue emblemática por su cultura de carretera,
-						letreros icónicos y lugares históricos a lo largo del camino. A pesar de su declive después de
-						la
-						construcción de autopistas modernas, todavía atrae a entusiastas de la historia
-						de carreteras.</p>
+					<p class="cajaContenido">La ciudad de Chicago se considera el punto de partida oriental de la Ruta 66, que se extendía al oeste desde allí hasta llegar a la costa oeste en Santa Mónica, California. Esta relación es una parte significativa de la historia de la carretera y contribuyó a la importancia de Chicago como punto de partida para aquellos que buscaban aventurarse hacia el oeste a lo largo de la Ruta 66.
+
+						La ciudad de Chicago fue un punto de convergencia importante para personas de todo el país que buscaban viajar hacia el oeste a lo largo de la Ruta 66 durante la Gran Depresión y las décadas posteriores. La carretera comenzaba en el centro de Chicago, en Adams Street y Michigan Avenue, y desde allí, los viajeros se dirigían hacia el oeste, recorriendo varios estados y experimentando la diversidad de paisajes y culturas a lo largo del camino.
+						
+						Chicago también desempeñó un papel clave como centro de abastecimiento para aquellos que se aventuraban por la Ruta 66. Los viajeros a menudo se detenían en Chicago para abastecerse de suministros, prepararse para su viaje o simplemente descansar antes de embarcarse</p>
+				</div>
+			</div>
+		</section>
+
+		<section id="SP" class="bordesCidudades">
+			<div class="sectionSpringfield">
+				<div class="cajaTitulo">
+					<img class="objetosCartel" src="../images/granero/museo/flecha.webp" alt="">
+					<h2>Springfield</h2>
+					<img class="objetosCartel2" src="../images/granero/museo/cartel 66.webp" alt="">
+				</div>
+				<div class="informacionCiudad">
+					<p class="cajaContenido">Springfield, Illinois, es una ciudad importante en la historia de la Ruta 66. Springfield es conocida como la "Ciudad de Abraham Lincoln" debido a su estrecha asociación con el presidente de los Estados Unidos, Abraham Lincoln, quien vivió en Springfield antes de su elección como presidente. La Ruta 66 pasaba directamente por Springfield en su recorrido desde Chicago, Illinois, hacia el oeste. Esto significaba que Springfield era una parada importante para los viajeros que recorrían la Ruta 66. La carretera atravesaba el centro de la ciudad, lo que la hacía un punto de referencia icónico en el camino.</p>
+					<div class="contenedor-galeria">
+						<ul>
+							<li>
+								<div class="titulo-imagen">
+									<a href="#">Imágen 1</a>
+								</div>
+								<img
+									src="../images/granero/ciudades/sp/627-1259_small.jpg">
+							</li>
+							<li>
+								<div class="titulo-imagen">
+									<a href="#">Imágen 2</a>
+								</div>
+								<img src="../images/granero/ciudades/sp/Court_Square,_Springfield_MA.jpg">
+							</li>
+							<li>
+								<div class="titulo-imagen">
+									<a href="#">Imágen 3</a>
+								</div>
+								<img
+									src="../images/granero/ciudades/sp/Court_Square_2013_06_02.jpg">
+							</li>
+							<li>
+								<div class="titulo-imagen">
+									<a href="#">Imágen 4</a>
+								</div>
+								<img src="../images/granero/ciudades/sp/Springfield-MA.jpg">
+							</li>
+							<li>
+								<div class="titulo-imagen">
+									<a href="#">Imágen 5</a>
+								</div>
+								<img src="../images/granero/ciudades/lv/the-strip.jpg">
+							</li>
+						</ul>
+					</div>
+				</div>
+			</div>
+		</section>
+
+		<section id="OK" class="bordesCidudades">
+			<div class="sectionOklahoma">
+				<div class="cajaTitulo">
+					<img class="objetosCartel" src="../images/granero/museo/flecha.webp" alt="">
+					<h2>Oklahoma</h2>
+					<img class="objetosCartel2" src="../images/granero/museo/cartel 66.webp" alt="">
+				</div>
+				<div class="informacionCiudad">
+					<div class="contenedor-galeria">
+						<ul>
+							<li>
+								<div class="titulo-imagen">
+									<a href="#">Hollywood</a>
+								</div>
+								<img src="../images/granero/ciudades/ok/258564-Oklahoma-City.jpg">
+							</li>
+							<li>
+								<div class="titulo-imagen">
+									<a href="#">Ciudad de Los Angeles</a>
+								</div>
+								<img src="../images/granero/ciudades/ok/catedral vieja catolica de san jose.jpg">
+							</li>
+							<li>
+								<div class="titulo-imagen">
+									<a href="#">Rodeo Drive Beverly Hills</a>
+								</div>
+								<img
+									src="../images/granero/ciudades/ok/Oklahoma-City-1.jpg">
+							</li>
+							<li>
+								<div class="titulo-imagen">
+									<a href="#">Cartel Hollywood</a>
+								</div>
+								<img src="../images/granero/ciudades/ok/oklahoma-city-usa-skyscrapers-buildings-architecture.jpg">
+							</li>
+							<li>
+								<div class="titulo-imagen">
+									<a href="#">Observatorio Griffith</a>
+								</div>
+								<img src="../images/granero/ciudades/la/99.jpg">
+							</li>
+						</ul>
+					</div>
+					<p class="cajaContenido">Oklahoma cuenta con aproximadamente 400 millas (unos 640 kilómetros) de la Ruta 66, y numerosas ciudades y pueblos en el estado tienen una fuerte conexión con la carretera. Algunos de los puntos destacados de la Ruta 66 en Oklahoma incluyen la ciudad de Tulsa, que alberga el famoso arco de la Ruta 66 y el Museo de Historia de la Ruta 66, así como Oklahoma City, que tiene una vibrante escena de la Ruta 66 y el Capitolio del Estado de Oklahoma, un sitio histórico cerca de la carretera. Oklahoma también presenta paisajes variados, desde las montañas de Ozark hasta las planicies, lo que la convierte en un estado emblemático para los viajeros que exploran la Ruta 66 en busca de su rica historia y cultura.</p>
+				</div>
+			</div>
+		</section>
+
+		<section id="TX" class="bordesCidudades">
+			<div class="sectionTexas">
+				<div class="cajaTitulo">
+					<img class="objetosCartel" src="../images/granero/museo/flecha.webp" alt="">
+					<h2>Texas</h2>
+					<img class="objetosCartel2" src="../images/granero/museo/cartel 66.webp" alt="">
+				</div>
+				<div class="informacionCiudadChicago">
+					<div class="contenedor-galeria">
+						<ul>
+							<li>
+								<div class="titulo-imagen">
+									<a href="#">Hollywood</a>
+								</div>
+								<img src="../images/granero/ciudades/tx/amarillo texas.jpg">
+							</li>
+							<li>
+								<div class="titulo-imagen">
+									<a href="#">Ciudad de Los Angeles</a>
+								</div>
+								<img src="../images/granero/ciudades/tx/Big Bend National Park.webp">
+							</li>
+							<li>
+								<div class="titulo-imagen">
+									<a href="#">Rodeo Drive Beverly Hills</a>
+								</div>
+								<img
+									src="../images/granero/ciudades/tx/cadillac ranch amarillo texas.jpg">
+							</li>
+							<li>
+								<div class="titulo-imagen">
+									<a href="#">Cartel Hollywood</a>
+								</div>
+								<img src="../images/granero/ciudades/tx/shamrock.jpg">
+							</li>
+							<li>
+								<div class="titulo-imagen">
+									<a href="#">Observatorio Griffith</a>
+								</div>
+								<img src="../images/granero/ciudades/la/99.jpg">
+							</li>
+						</ul>
+					</div>
+					<p class="cajaContenido">a Ruta 66 entra a Texas desde el norte en Shamrock y sale hacia el oeste en Glenrio, pasando por ciudades como Amarillo y Vega. En Amarillo, los viajeros pueden visitar el famoso Cadillac Ranch, una instalación artística que presenta automóviles enterrados en el suelo, así como el Museo Histórico de la Ruta 66. Texas ofrece un tramo icónico de la Ruta 66 con amplias carreteras y paisajes desérticos, lo que la convierte en una experiencia única para aquellos que siguen la ruta. La Ruta 66 en Texas es rica en historia y cultura, lo que la hace especialmente atractiva para los entusiastas de la carretera y los viajeros que buscan explorar su legado.</p>
+				</div>
+			</div>
+		</section>
+
+		<section id="AL" class="bordesCidudades">
+			<div class="sectionAlburquerque">
+				<div class="cajaTitulo">
+					<img class="objetosCartel" src="../images/granero/museo/flecha.webp" alt="">
+					<h2>Albuquerque</h2>
+					<img class="objetosCartel2" src="../images/granero/museo/cartel 66.webp" alt="">
+				</div>
+				<div class="informacionCiudad">
+					<p class="cajaContenido">Albuquerque, ubicada en el estado de Nuevo México, desempeña un papel destacado en la historia de la Ruta 66. La carretera pasa directamente a través de la ciudad, y Albuquerque es conocida por su vibrante escena de la Ruta 66 y su arquitectura característica de mediados de siglo. El área de Nob Hill en Albuquerque es especialmente famosa por sus negocios, moteles y restaurantes relacionados con la Ruta 66. Además, el Museo de la Ruta 66 de Albuquerque es un destino popular para los visitantes que desean aprender más sobre la historia de la carretera y su influencia en la cultura estadounidense. Con su rica herencia en la Ruta 66 y su ubicación en el suroeste de Estados Unidos, Albuquerque es un punto clave de interés para aquellos que exploran esta histórica carretera.</p>
+					<div class="contenedor-galeria">
+						<ul>
+							<li>
+								<div class="titulo-imagen">
+									<a href="#">Imágen 1</a>
+								</div>
+								<img
+									src="../images/granero/ciudades/alb/ciudad.jpg">
+							</li>
+							<li>
+								<div class="titulo-imagen">
+									<a href="#">Imágen 2</a>
+								</div>
+								<img src="../images/granero/ciudades/alb/festival de globos albuquerque.jpg">
+							</li>
+							<li>
+								<div class="titulo-imagen">
+									<a href="#">Imágen 3</a>
+								</div>
+								<img
+									src="../images/granero/ciudades/alb/iglesia san felipe de neri old town albuquerque.jpg">
+							</li>
+							<li>
+								<div class="titulo-imagen">
+									<a href="#">Imágen 4</a>
+								</div>
+								<img src="../images/granero/ciudades/alb/wigwam-motel-en-estados-unidos.jpg">
+							</li>
+							<li>
+								<div class="titulo-imagen">
+									<a href="#">Imágen 5</a>
+								</div>
+								<img src="../images/granero/ciudades/lv/the-strip.jpg">
+							</li>
+						</ul>
+					</div>
+				</div>
+			</div>
+		</section>
+
+		<section id="FL" class="bordesCidudades">
+			<div class="sectionFlagstaff">
+				<div class="cajaTitulo">
+					<img class="objetosCartel" src="../images/granero/museo/flecha.webp" alt="">
+					<h2>Flagstaff</h2>
+					<img class="objetosCartel2" src="../images/granero/museo/cartel 66.webp" alt="">
+				</div>
+				<div class="informacionCiudad">
+					<div class="contenedor-galeria">
+						<ul>
+							<li>
+								<div class="titulo-imagen">
+									<a href="#">Hollywood</a>
+								</div>
+								<img src="../images/granero/ciudades/fla/crater.webp">
+							</li>
+							<li>
+								<div class="titulo-imagen">
+									<a href="#">Ciudad de Los Angeles</a>
+								</div>
+								<img src="../images/granero/ciudades/fla/flagstaff dowtown.jpg">
+							</li>
+							<li>
+								<div class="titulo-imagen">
+									<a href="#">Rodeo Drive Beverly Hills</a>
+								</div>
+								<img
+									src="../images/granero/ciudades/fla/flagstaff winter.jpg">
+							</li>
+							<li>
+								<div class="titulo-imagen">
+									<a href="#">Cartel Hollywood</a>
+								</div>
+								<img src="../images/granero/ciudades/fla/walnut canyon.jpg">
+							</li>
+							<li>
+								<div class="titulo-imagen">
+									<a href="#">Observatorio Griffith</a>
+								</div>
+								<img src="../images/granero/ciudades/la/99.jpg">
+							</li>
+						</ul>
+					</div>
+					<p class="cajaContenido">Flagstaff, Arizona, es otra ciudad icónica en la historia de la Ruta 66. Situada en el norte de Arizona, la Ruta 66 atraviesa Flagstaff, lo que la convierte en una parada importante para los viajeros que recorren la carretera. La ciudad está rodeada de hermosos paisajes montañosos y bosques, y es conocida por su ambiente pintoresco y su arquitectura de mediados del siglo XX. En Flagstaff, los visitantes pueden explorar el Museo de Historia de la Ruta 66 y admirar el famoso Motel Wigwam Village, que ofrece cabañas en forma de wigwam. Además, Flagstaff es una puerta de entrada al Parque Nacional del Gran Cañón, lo que la convierte en un destino popular para aquellos que viajan a lo largo de la Ruta 66 y desean explorar esta maravilla natural. La ciudad encarna el espíritu de la Ruta 66 y ofrece una experiencia única a los entusiastas de la carretera y los amantes de la aventura.</p>
 				</div>
 			</div>
 		</section>
@@ -218,16 +455,7 @@
 					<img class="objetosCartel2" src="../images/granero/museo/cartel 66.webp" alt="">
 				</div>
 				<div class="informacionCiudad">
-					<p class="cajaContenido">Los Ángeles es una ciudad icónica ubicada en California, conocida por su
-						diversidad cultural y atracciones turísticas como Hollywood, el Parque Griffith y Disneyland.
-						Tiene un clima mediterráneo y es un importante centro cultural y de entretenimiento.
-						La Ruta 66, también llamada la "Main Street of America", fue una histórica carretera que se
-						extendía
-						desde Chicago hasta Los Ángeles. Fue emblemática por su cultura de carretera,
-						letreros icónicos y lugares históricos a lo largo del camino. A pesar de su declive después de
-						la
-						construcción de autopistas modernas, todavía atrae a entusiastas de la historia
-						de carreteras.</p>
+					<p class="cajaContenido">Las Vegas, Nevada, es una ciudad mundialmente conocida por su vida nocturna, casinos de renombre, espectáculos en vivo, y una ecléctica escena gastronómica. Situada en el famoso Strip, ofrece hoteles de lujo, resorts, y entretenimiento sin fin. Además de los casinos, puedes disfrutar de espectáculos en vivo de alta calidad, experiencias gastronómicas de chef, y visitar atracciones turísticas como la noria High Roller y el Museo Neon. Con un clima desértico, Las Vegas atrae a visitantes durante todo el año y es un destino ideal tanto para la diversión nocturna como para explorar su variedad de atracciones.</p>
 					<div class="contenedor-galeria">
 						<ul>
 							<li>
