--- a/index.html
+++ b/index.html
@@ -408,7 +408,7 @@
 
 
 								<!-- Title -->
-								<h3 class="h5-sm">Las vegas</h3>
+								<h3 class="h5-sm letrasBlancas">Las vegas</h3>
 
 								<!-- Description -->
 								<p class="grey-color">Doble con cheddar, panceta, cebolla morada, salsa granero, baño de
@@ -453,7 +453,7 @@
 
 
 								<!-- Title -->
-								<h3 class="h5-sm">Springfield</h3>
+								<h3 class="h5-sm letrasBlancas">Springfield</h3>
 
 								<!-- Description -->
 								<p class="grey-color">cheddar, panceta y huevo</p>
@@ -497,7 +497,7 @@
 
 
 								<!-- Title -->
-								<h3 class="h5-sm">Chicago</h3>
+								<h3 class="h5-sm letrasBlancas">Chicago</h3>
 
 								<!-- Description -->
 								<p class="grey-color">con queso cheddar, panceta, cebolla caramelizada y barbacoa</p>
@@ -541,7 +541,7 @@
 
 
 								<!-- Title -->
-								<h3 class="h5-sm">Seligman</h3>
+								<h3 class="h5-sm letrasBlancas">Seligman</h3>
 
 								<!-- Description -->
 								<p class="grey-color">Mila66- Rúcula, provolone y jamón crudo </p>
@@ -585,7 +585,7 @@
 
 
 								<!-- Title -->
-								<h3 class="h5-sm">La histórica</h3>
+								<h3 class="h5-sm letrasBlancas">La histórica</h3>
 
 								<!-- Description -->
 								<p class="grey-color">Salsa de tomate, muzzarella, jamón y orégano</p>
@@ -629,7 +629,7 @@
 
 
 								<!-- Title -->
-								<h3 class="h5-sm">Phyli de carne</h3>
+								<h3 class="h5-sm letrasBlancas">Phyli de carne</h3>
 
 								<!-- Description -->
 								<p class="grey-color">Sandwich de carne desmenuzada con cebolla caramelizada y queso
@@ -674,7 +674,7 @@
 
 
 								<!-- Title -->
-								<h3 class="h5-sm">Picada caliente</h3>
+								<h3 class="h5-sm letrasBlancas">Picada caliente</h3>
 
 								<!-- Description -->
 								<p class="grey-color">Rabas, aros de cebolla, chicken fingers, cañoncitos de muzzarella
@@ -718,7 +718,7 @@
 
 
 								<!-- Title -->
-								<h3 class="h5-sm">Hot dog boom</h3>
+								<h3 class="h5-sm letrasBlancas">Hot dog boom</h3>
 
 								<!-- Description -->
 								<p class="grey-color">Con chedar y panceta</p>
