--- a/pages/museo.html
+++ b/pages/museo.html
@@ -125,23 +125,23 @@
 		<section class="bordesCidudades">
 			<div class="fondoRuta">
 				<div class="imagenUSA">
-					<img src="../images/granero/museo/outline-drawing-of-usa-map-free-png.webp" alt="Tu Imagen">
+					<img src="../images/granero/museo/outline-drawing-of-usa-map-free-png2 copia.webp" alt="Tu Imagen">
 					<div class="enlaces-fijos">
-						<a href="#" class="enlace losAngeles">Los Angeles</a>
+						<p href="#" class="enlace losAngeles miniCartelMapa">Los Angeles</p>
 						<a href="#LA" class="enlace losAngelesPunto">◉</a>
-						<a href="#" class="enlace lasVegas">Las Vegas</a>
+						<p href="#" class="enlace lasVegas miniCartelMapa" >Las Vegas</p>
 						<a href="#LV" class="enlace lasVegasPunto">◉</a>
-						<a href="#" class="enlace flagstaff">Flagstaff</a>
+						<p href="#" class="enlace flagstaff miniCartelMapa">Flagstaff</p>
 						<a href="#FL" class="enlace flagstaffPunto">◉</a>
-						<a href="#" class="enlace alburquerque">Alburquerque</a>
+						<p href="#" class="enlace alburquerque miniCartelMapa">Alburquerque</p>
 						<a href="#AL" class="enlace alburquerquePunto">◉</a>
-						<a href="#" class="enlace shamrock">Texas</a>
+						<p href="#" class="enlace shamrock miniCartelMapa">Texas</p>
 						<a href="#TX" class="enlace shamrockPunto">◉</a>
-						<a href="#" class="enlace oklahomaCity">Oklahoma City</a>
+						<p href="#" class="enlace oklahomaCity miniCartelMapa">Oklahoma City</p>
 						<a href="#OK" class="enlace oklahomaCityPunto">◉</a>
-						<a href="#" class="enlace springfield">Springfield</a>
+						<p href="#" class="enlace springfield miniCartelMapa">Springfield</p>
 						<a href="#SP" class="enlace springfieldPunto">◉</a>
-						<a href="#" class="enlace chicago">Chicago</a>
+						<p href="#" class="enlace chicago miniCartelMapa">Chicago</p>
 						<a href="#CHIC" class="enlace chicagoPunto">◉</a>
 						<img class="enlace cartelRuta66" src="../images/granero/museo/543626.png" alt="">
 						<img class="enlace cartelAuto"
@@ -218,27 +218,27 @@
 						<ul>
 							<li>
 								<div class="titulo-imagen">
-									<a href="#">Imágen 1</a>
+									<a href="#">Ciudad de Springfield</a>
 								</div>
 								<img
 									src="../images/granero/ciudades/sp/627-1259_small.jpg">
 							</li>
 							<li>
 								<div class="titulo-imagen">
-									<a href="#">Imágen 2</a>
+									<a href="#">Court Square Springfield</a>
 								</div>
 								<img src="../images/granero/ciudades/sp/Court_Square,_Springfield_MA.jpg">
 							</li>
 							<li>
 								<div class="titulo-imagen">
-									<a href="#">Imágen 3</a>
+									<a href="#">Court Square Springfield</a>
 								</div>
 								<img
 									src="../images/granero/ciudades/sp/Court_Square_2013_06_02.jpg">
 							</li>
 							<li>
 								<div class="titulo-imagen">
-									<a href="#">Imágen 4</a>
+									<a href="#">Ciudad de Springfield</a>
 								</div>
 								<img src="../images/granero/ciudades/sp/Springfield-MA.jpg">
 							</li>
@@ -266,26 +266,26 @@
 						<ul>
 							<li>
 								<div class="titulo-imagen">
-									<a href="#">Hollywood</a>
+									<a href="#">Oklahoma City</a>
 								</div>
 								<img src="../images/granero/ciudades/ok/258564-Oklahoma-City.jpg">
 							</li>
 							<li>
 								<div class="titulo-imagen">
-									<a href="#">Ciudad de Los Angeles</a>
+									<a href="#">Vieja catedral catolica de San Josa</a>
 								</div>
 								<img src="../images/granero/ciudades/ok/catedral vieja catolica de san jose.jpg">
 							</li>
 							<li>
 								<div class="titulo-imagen">
-									<a href="#">Rodeo Drive Beverly Hills</a>
+									<a href="#">Oklahoma City</a>
 								</div>
 								<img
 									src="../images/granero/ciudades/ok/Oklahoma-City-1.jpg">
 							</li>
 							<li>
 								<div class="titulo-imagen">
-									<a href="#">Cartel Hollywood</a>
+									<a href="#">Oklahoma City</a>
 								</div>
 								<img src="../images/granero/ciudades/ok/oklahoma-city-usa-skyscrapers-buildings-architecture.jpg">
 							</li>
@@ -314,26 +314,26 @@
 						<ul>
 							<li>
 								<div class="titulo-imagen">
-									<a href="#">Hollywood</a>
+									<a href="#">Ciudad de Amarillo Texas</a>
 								</div>
 								<img src="../images/granero/ciudades/tx/amarillo texas.jpg">
 							</li>
 							<li>
 								<div class="titulo-imagen">
-									<a href="#">Ciudad de Los Angeles</a>
+									<a href="#">Big Bend National Park</a>
 								</div>
 								<img src="../images/granero/ciudades/tx/Big Bend National Park.webp">
 							</li>
 							<li>
 								<div class="titulo-imagen">
-									<a href="#">Rodeo Drive Beverly Hills</a>
+									<a href="#">Cadillac ranch Amarillo Texas</a>
 								</div>
 								<img
 									src="../images/granero/ciudades/tx/cadillac ranch amarillo texas.jpg">
 							</li>
 							<li>
 								<div class="titulo-imagen">
-									<a href="#">Cartel Hollywood</a>
+									<a href="#">Ciudad de Shamrock</a>
 								</div>
 								<img src="../images/granero/ciudades/tx/shamrock.jpg">
 							</li>
@@ -363,27 +363,27 @@
 						<ul>
 							<li>
 								<div class="titulo-imagen">
-									<a href="#">Imágen 1</a>
+									<a href="#">Ciudad de Albuquerque</a>
 								</div>
 								<img
 									src="../images/granero/ciudades/alb/ciudad.jpg">
 							</li>
 							<li>
 								<div class="titulo-imagen">
-									<a href="#">Imágen 2</a>
+									<a href="#">Festival de globos</a>
 								</div>
 								<img src="../images/granero/ciudades/alb/festival de globos albuquerque.jpg">
 							</li>
 							<li>
 								<div class="titulo-imagen">
-									<a href="#">Imágen 3</a>
+									<a href="#">Iglesia San Felipe de Neri</a>
 								</div>
 								<img
 									src="../images/granero/ciudades/alb/iglesia san felipe de neri old town albuquerque.jpg">
 							</li>
 							<li>
 								<div class="titulo-imagen">
-									<a href="#">Imágen 4</a>
+									<a href="#">Wigwam motel</a>
 								</div>
 								<img src="../images/granero/ciudades/alb/wigwam-motel-en-estados-unidos.jpg">
 							</li>
@@ -411,26 +411,26 @@
 						<ul>
 							<li>
 								<div class="titulo-imagen">
-									<a href="#">Hollywood</a>
+									<a href="#">Cráter Barringer</a>
 								</div>
 								<img src="../images/granero/ciudades/fla/crater.webp">
 							</li>
 							<li>
 								<div class="titulo-imagen">
-									<a href="#">Ciudad de Los Angeles</a>
+									<a href="#">Ciudad de Flagstaff</a>
 								</div>
 								<img src="../images/granero/ciudades/fla/flagstaff dowtown.jpg">
 							</li>
 							<li>
 								<div class="titulo-imagen">
-									<a href="#">Rodeo Drive Beverly Hills</a>
+									<a href="#">Ciudad de Flagstaff en invierno</a>
 								</div>
 								<img
 									src="../images/granero/ciudades/fla/flagstaff winter.jpg">
 							</li>
 							<li>
 								<div class="titulo-imagen">
-									<a href="#">Cartel Hollywood</a>
+									<a href="#">Walnut canyon</a>
 								</div>
 								<img src="../images/granero/ciudades/fla/walnut canyon.jpg">
 							</li>
@@ -460,33 +460,33 @@
 						<ul>
 							<li>
 								<div class="titulo-imagen">
-									<a href="#">Imágen 1</a>
+									<a href="#">MSG Sphere</a>
 								</div>
 								<img
 									src="../images/granero/ciudades/lv/230705091855-05-msg-sphere-las-vegas-full-169.webp">
 							</li>
 							<li>
 								<div class="titulo-imagen">
-									<a href="#">Imágen 2</a>
+									<a href="#">Ciudad de Las Vegas</a>
 								</div>
 								<img src="../images/granero/ciudades/lv/322f687a-ed74-46f7-851e-161ace9241ad.webp">
 							</li>
 							<li>
 								<div class="titulo-imagen">
-									<a href="#">Imágen 3</a>
+									<a href="#">Hotel Luxor</a>
 								</div>
 								<img
 									src="../images/granero/ciudades/lv/397187_8_6413_650_488_119001_VAId1047Seq1IMGa07042a36bcb80d059fa1d927253865a.webp">
 							</li>
 							<li>
 								<div class="titulo-imagen">
-									<a href="#">Imágen 4</a>
+									<a href="#">Cartel de Las Vegas</a>
 								</div>
 								<img src="../images/granero/ciudades/lv/las-vegas_d.jpg.image.1296.974.high.webp">
 							</li>
 							<li>
 								<div class="titulo-imagen">
-									<a href="#">Imágen 5</a>
+									<a href="#">Ciudad de Las Vegas</a>
 								</div>
 								<img src="../images/granero/ciudades/lv/the-strip.jpg">
 							</li>
