--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
 							</p>
 
 							<!-- Button -->
-							<a href="https://queresto.com/granero66" target="_blank"  class="btn btn-md btn-yellow tra-white-hover">VER MENU</a>
+							<a href="https://queresto.com/granero66" target="_blank"  class="btn btn-md btn-yellow tra-white-hover">🪦 VER MENU 🪦</a>
 
 						</div>
 					</div> <!-- END HERO TEXT -->
@@ -194,7 +194,7 @@
 								<div class="estadoTienda " id="estadoTienda"></div>
 								<div class="contadorTienda" id="contadorTienda"></div>
 								<a href="https://www.google.com/maps/dir//Granero+66,+Av.+Don+Bosco+2340,+B7000+Tandil,+Provincia+de+Buenos+Aires/@-37.3695264,-59.1141707,17z/data=!4m8!4m7!1m0!1m5!1m1!1s0x95911f717748a34f:0x5fc6f216e0bd6b0d!2m2!1d-59.1115958!2d-37.3695307?hl=es&entry=ttu"
-									target="_blank" class="btn btn-md btn-red tra-red-hover">Como llegar</a>
+									target="_blank" class="btn btn-md btn-red tra-red-hover">🎃 Como llegar 🎃</a>
 							</div>
 						</div>
 					</div> <!-- END ABOUT TEXT -->
@@ -233,7 +233,7 @@
 								</p>
 								<div class="container">
 									<a href="https://www.google.com/search?q=granero+66&rlz=1C1ALOY_esAR1071AR1071&oq=granero+66+&aqs=chrome..69i57j69i60l3.5352j0j4&sourceid=chrome&ie=UTF-8#lrd=0x95911f717748a34f:0x5fc6f216e0bd6b0d,3,,,,"
-										target="_blank" class="btn btn-md btn-red tra-red-hover">Valorar</a>
+										target="_blank" class="btn btn-md btn-red tra-red-hover">🎃 Valorar 🎃</a>
 								</div>
 							</div>
 						</div> <!-- END ABOUT TEXT -->
@@ -265,7 +265,7 @@
 							</p>
 
 							<!-- Button -->
-							<a href="https://queresto.com/granero66" target="_blank" class="btn btn-md btn-red tra-red-hover">Explorar menu completo</a>
+							<a href="https://queresto.com/granero66" target="_blank" class="btn btn-md btn-red tra-red-hover">🎃 Explorar menu completo 🎃</a>
 
 						</div>
 					</div> <!-- END ABOUT TEXT -->
