--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
 							</p>
 
 							<!-- Button -->
-							<a href="https://queresto.com/granero66" target="_blank"  class="btn btn-md btn-yellow tra-white-hover">🪦 VER MENU 🪦</a>
+							<a href="https://queresto.com/granero66" target="_blank"  class="btn btn-md btn-yellow tra-white-hover">⚰️ VER MENU ⚰️</a>
 
 						</div>
 					</div> <!-- END HERO TEXT -->
