--- a/index.html
+++ b/index.html
@@ -64,7 +64,10 @@
 </script>
 
 <body>
-
+	<div class="spider-container">
+		<div class="trail"></div>
+        <div class="spider"></div>
+    </div>
 
 
 
