--- a/index.html
+++ b/index.html
@@ -81,6 +81,10 @@
 		</div>
 	</div>
 
+	<div id="smoke-container">
+        <video src=""></video>
+    </div>
+
 
 	<!-- HEADER-3
 		============================================= -->
