--- a/index.html
+++ b/index.html
@@ -82,7 +82,6 @@
 	</div>
 
 
-
 	<!-- HEADER-3
 		============================================= -->
 	<header id="header-3" class="header navik-header header-transparent header-shadow">
@@ -753,8 +752,8 @@
 						<div id="pb-2-1" class="pbox-2 bg-fixed">
 							<div class="pbox-2-txt brown-color texto container">
 
-								<h4 class="h4-lg txt-300 ">Proba las nuevas</h4>
-								<h4 class="h4-xl ">Mila66</h4>
+								<h4 class="h4-lg txt-300 ">Edicion limitada</h4>
+								<h4 class="h4-xl ">halloween</h4>
 								<a href="https://queresto.com/granero66" target="_blank" class="btn btn-red tra-red-hover">Conocer mas</a>
 
 							</div>
@@ -769,7 +768,7 @@
 
 								<h4 class="h4-lg txt-300">Conoce nuestro</h4>
 								<h4 class="h4-xl">museo de autos</h4>
-								<a href="./pages/museo.html" class="btn btn-red tra-red-hover">Conocer mas</a>
+								<a href="https://www.instagram.com/p/CvdKzN0JAa8/" target="_blank" class="btn btn-red tra-red-hover">Conocer mas</a>
 
 							</div>
 						</div>
