--- a/pages/museo.html
+++ b/pages/museo.html
@@ -161,6 +161,20 @@
 					<img class="objetosCartel2" src="../images/granero/museo/cartel 66.webp" alt="">
 				</div>
 				<div class="informacionCiudadChicago">
+					<div class="contenidoCiudadCelu">
+						<div class="cajaCiudadCelu">
+							<div class="InfoCiudad">
+								<p>La ciudad de Chicago se considera el punto de partida oriental de la Ruta 66, que se extendía al oeste desde allí hasta llegar a la costa oeste en Santa Mónica, California. Esta relación es una parte significativa de la historia de la carretera y contribuyó a la importancia de Chicago como punto de partida para aquellos que buscaban aventurarse hacia el oeste a lo largo de la Ruta 66.
+		
+									La ciudad de Chicago fue un punto de convergencia importante para personas de todo el país que buscaban viajar hacia el oeste a lo largo de la Ruta 66 durante la Gran Depresión y las décadas posteriores. La carretera comenzaba en el centro de Chicago, en Adams Street y Michigan Avenue, y desde allí, los viajeros se dirigían hacia el oeste, recorriendo varios estados y experimentando la diversidad de paisajes y culturas a lo largo del camino.
+									
+									Chicago también desempeñó un papel clave como centro de abastecimiento para aquellos que se aventuraban por la Ruta 66. Los viajeros a menudo se detenían en Chicago para abastecerse de suministros, prepararse para su viaje o simplemente descansar antes de embarcarse</p>
+							</div>
+							<div class="fotosCiudad">
+								<img src="../images/granero/ciudades/ch/2af94a274ebf7f6716f9b2068595581c.jpg" alt="">
+							</div>
+						</div>
+					</div>
 					<div class="contenedor-galeria">
 						<ul>
 							<li>
@@ -202,7 +216,7 @@
 						
 						Chicago también desempeñó un papel clave como centro de abastecimiento para aquellos que se aventuraban por la Ruta 66. Los viajeros a menudo se detenían en Chicago para abastecerse de suministros, prepararse para su viaje o simplemente descansar antes de embarcarse</p>
 				</div>
-			</div>
+			
 		</section>
 
 		<section id="SP" class="bordesCidudades">
